# snakemake-hpc-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_bake.py  test_hello_dryrun.sh
{{cookiecutter.project_slug}}/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/docs/: PIPELINE.md
{{cookiecutter.project_slug}}/tests/: test_smoke.py
{{cookiecutter.project_slug}}/workflow/: Snakefile  test_pipeline.sh
{{cookiecutter.project_slug}}/workflow/config/: config.yaml  config_corehpc.yaml.example  config_wynton.yaml.example  samples.tsv  test_config.yaml  test_config_apptainer.yaml  test_config_apptainer_slurm.yaml  test_samples.tsv
{{cookiecutter.project_slug}}/workflow/containers/hello/: Dockerfile  build.sh
{{cookiecutter.project_slug}}/workflow/profiles/apptainer-dev/: config.yaml
{{cookiecutter.project_slug}}/workflow/profiles/local/: config.yaml
{{cookiecutter.project_slug}}/workflow/profiles/sge/: config.yaml  status.sh
{{cookiecutter.project_slug}}/workflow/profiles/slurm/: README.md  config.yaml
{{cookiecutter.project_slug}}/workflow/rules/: common.smk  hello.smk
